<resources>
    //1.这里的是正式会使用的
    <string name="app_name">FrameWork</string>
    <string name="permission_test">权限申请测试</string>
    //暂时
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="action_settings">setting</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_launch">LaunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_bottom_navi">MainActivityBottomNavi</string>
    <string name="title_home">Home</string>
    <string name="title_set">Setting</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //共享的标题名字和时间
    <string name="shared_name">ShareName</string>
    <string name="shared_time">ShareTime</string>

    <string name="title_activity_tabs">TabsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string-array name="tabs_title_array">
        <item>CITY GUIDE</item>
        <item>SHOP</item>
        <item>EAT</item>
    </string-array>

    <string-array name="tabs_data_type_array">
        <item>city_guide</item>
        <item>shop</item>
        <item>eat</item>
    </string-array>

</resources>
