<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:tabIndicatorColor="@android:color/black"
        app:tabIndicatorHeight="2dp"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@color/common_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

